Extended example.